infralytics/resources/latest-views.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: latest-views
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: latest-views
  template:
    metadata:
      labels:
        app.kubernetes.io/name: latest-views
    spec:
      containers:
        - command:
            - node
            - dist/src/index.js
          image: harbor.pandathedog.com/library/infralytics-api
          name: latest-views
          volumeMounts:
            - mountPath: /certs/ca-bundle.pem
              name: ca-bundle
              subPath: ca-bundle.pem
            - mountPath: /opt/www/data
              name: data
          workingDir: /infralytics/apps/latest-views
      volumes:
        - configMap:
            name: ca-bundle
          name: ca-bundle
        - emptyDir: {}
          name: data
