infralytics/resources/docubuilder.yaml
apiVersion: v1
kind: Service
metadata:
  name: docubuilder
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app.kubernetes.io/name: docubuilder
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docubuilder
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: docubuilder
  template:
    metadata:
      labels:
        app.kubernetes.io/name: docubuilder
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: docubuilder-env
          image: harbor.pandathedog.com/library/docubuilder
          name: docubuilder
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /app/certs
              name: certs
      volumes:
        - name: certs
          secret:
            secretName: docubuilder-tls
