infralytics/resources/static-content.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-content
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app.kubernetes.io/name: static-content
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-content
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: static-content
  template:
    metadata:
      labels:
        app.kubernetes.io/name: static-content
    spec:
      containers:
        - image: harbor.pandathedog.com/library/static-content
          name: static-content
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
