infralytics/resources/illumina.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 256k
  name: illumina
spec:
  ingressClassName: nginx
  rules:
    - host: illumina.pandathedog.com
      http:
        paths:
          - backend:
              service:
                name: illumina
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - '*.pandathedog.com'
---
apiVersion: v1
kind: Service
metadata:
  name: illumina
spec:
  ports:
    - name: http
      port: 3000
  selector:
    app.kubernetes.io/name: illumina
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: illumina
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: illumina
  template:
    metadata:
      labels:
        app.kubernetes.io/name: illumina
    spec:
      containers:
        - env:
            - name: NODE_EXTRA_CA_CERTS
              value: /certs/ca-bundle.pem
            - name: AUTH_KEYCLOAK_ID
              value: illumina
            - name: AUTH_KEYCLOAK_ISSUER
              value: https://auth.pandathedog.com/realms/public
            - name: AUTH_TRUST_HOST
              value: "true"
            - name: BANNER_CLASSIFICATION_TEXT
              value: UNCLASSIFIED
            - name: DOCUBUILDER_API_BASE_URL
              value: https://infralytics.pandathedog.com/docubuilder/api/v1
            - name: IRONGATE_API_BASE_URL
              value: https://irongate.pandathedog.com/api/v1
            - name: NEXTAUTH_URL
              value: https://illumina.pandathedog.com
            - name: SCHEMA_URL
              value: https://infralytics.pandathedog.com/graphql/
            - name: SUPPORT_EMAIL
              value: ""
            - name: NEXT_PUBLIC_INFRALYTICS_API_BASE_URL
              value: https://infralytics.pandathedog.com/api/v1.1
            - name: NEXT_PUBLIC_HELP_NOW_BASE_URL
              value: ""
            - name: NEXT_PUBLIC_SVC_NOW_BASE_URL
              value: ""
          image: harbor.pandathedog.com/library/illumina
          name: illumina
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /certs/ca-bundle.pem
              name: ca-bundle
              subPath: ca-bundle.pem
      volumes:
        - configMap:
            name: ca-bundle
          name: ca-bundle
