infralytics/resources/infralytics-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-headers: DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,Accept,Content-Type,X-Client-ID,X-Route-ID
    nginx.ingress.kubernetes.io/cors-allow-methods: GET, PUT, POST, DELETE, PATCH, OPTIONS, HEAD
    nginx.ingress.kubernetes.io/cors-allow-origin: https://*.pandathedog.com
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: infralytics-api
spec:
  ingressClassName: nginx
  rules:
    - host: infralytics.pandathedog.com
      http:
        paths:
          - backend:
              service:
                name: infralytics-api
                port:
                  name: http
            path: /(graphql.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: static-content
                port:
                  name: http
            path: /(redoc.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: infralytics-api
                port:
                  name: http
            path: /api/v1.1/(.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: docubuilder
                port:
                  name: http
            path: /docubuilder/(.*)
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - '*.pandathedog.com'
---
apiVersion: v1
kind: Service
metadata:
  name: infralytics-api
spec:
  ports:
    - name: http
      port: 3000
  selector:
    app.kubernetes.io/name: infralytics-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infralytics-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: infralytics-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: infralytics-api
    spec:
      containers:
        - command:
            - node
            - dist/src/main.js
          image: harbor.pandathedog.com/library/infralytics-api
          name: infralytics-api
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /certs/ca-bundle.pem
              name: ca-bundle
              subPath: ca-bundle.pem
          workingDir: /infralytics/apps/infralytics-api
      volumes:
        - configMap:
            name: ca-bundle
          name: ca-bundle
