infralytics/resources/infralytics-cfe.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /insight/$1
  name: insight
spec:
  ingressClassName: nginx
  rules:
    - host: insight.pandathedog.com
      http:
        paths:
          - backend:
              service:
                name: infralytics-cfe
                port:
                  name: http
            path: /(.*)
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - '*.pandathedog.com'
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /irongate/$1
  name: irongate
spec:
  ingressClassName: nginx
  rules:
    - host: irongate.pandathedog.com
      http:
        paths:
          - backend:
              service:
                name: infralytics-cfe
                port:
                  name: http
            path: /(.*)
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - '*.pandathedog.com'
---
apiVersion: v1
kind: Service
metadata:
  name: infralytics-cfe
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app.kubernetes.io/name: infralytics-cfe
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infralytics-cfe
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: infralytics-cfe
  template:
    metadata:
      labels:
        app.kubernetes.io/name: infralytics-cfe
    spec:
      containers:
        - image: harbor.pandathedog.com/library/infralytics-cfe
          name: infralytics-cfe
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - mountPath: /etc/nginx/conf.d
              name: nginx-config
      volumes:
        - configMap:
            name: infralytics-cfe-nginx-config
          name: nginx-config
